Update: Redesign app header, add preferences dropdown to manage language and theme preferences, update profile dropdown to display user name, update nav bar to handle screen resize responsively, convert to drawer on mobile devices. Add neccessary translations (wip). Fix minor styling name issues. (wip) Dark mode adaptiveness

--- a/src/assets/styles/LoginPage.css
+++ b/src/assets/styles/LoginPage.css
@@ -54,7 +54,7 @@
   color: #161c3d;
 }
 
-.welcome-section {
+.welcome-section-registration {
   flex: 1;
   display: flex;
   align-items: center;
