--- a/src/assets/styles/RegisterPage.css
+++ b/src/assets/styles/RegisterPage.css
@@ -226,7 +226,7 @@
   color: #ffffff;
 }
 
-.welcome-section {
+.welcome-section-registration {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -238,7 +238,7 @@
   text-align: center;
 }
 
-.register-page-container.dark .welcome-section,
+.register-page-container.dark .welcome-section-registration,
 .register-page-container.dark .welcome-title,
 .register-page-container.dark .welcome-description,
 .register-page-container.dark .register-text {
@@ -301,7 +301,7 @@
     padding: 18px 7vw 18px 7vw;
   }
 
-  .welcome-section {
+  .welcome-section-registration {
     min-width: unset;
     max-width: 100vw;
     padding: 30px 0;
